--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
-language: java
 sudo: false
-script: mvn clean install test
+
+language: java
+
+env:
+    - TRAVIS_CI=true
+
+# Start xvfb for AWT to work, required for sound unit tests
+before_script:
+      - export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
